moved submod utils around, added symlink

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "utils"]
-	path = props/utils
+	path = utils
 	url = https://github.com/scottidler/utils
 	branch = master
 [submodule "botlib"]
