--- a/props/docker-compose.yml
+++ b/props/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   db:
     build: ./db
-    image: itcw/props_db
+    image: itcw/props_db:${APP_VERSION:-latest}
     restart: always
     ports:
     - 5432:5432
@@ -12,7 +12,7 @@ services:
     - database_data:/var/lib/postgresql/data
   bot:
     build: ./bot
-    image: itcw/props_bot
+    image: itcw/props_bot:${APP_VERSION:-latest}
     expose:
     - 8080
     ports:
