fixed env variables flowing through

--- a/props/docker-compose.yml
+++ b/props/docker-compose.yml
@@ -7,7 +7,12 @@ services:
     ports:
     - 5432:5432
     environment:
-      POSTGRES_PASSWORD: postgres
+    - APP_VERSION=${APP_VERSION}
+    - APP_BRANCH=${APP_BRANCH}
+    - APP_REVISION=${APP_REVISION}
+    - POSTGRES_DB=${POSTGRES_DB:-postgres}
+    - POSTGRES_USER=${POSTGRES_USER:-postgres}
+    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
     volumes:
     - database_data:/var/lib/postgresql/data
   bot:
@@ -20,9 +25,12 @@ services:
     links:
     - db
     environment:
-    - POSTGRES_DB=postgres
-    - POSTGRES_USER=postgres
-    - POSTGRES_PASSWORD=postgres
+    - APP_VERSION=${APP_VERSION}
+    - APP_BRANCH=${APP_BRANCH}
+    - APP_REVISION=${APP_REVISION}
+    - POSTGRES_DB=${POSTGRES_DB:-postgres}
+    - POSTGRES_USER=${POSTGRES_USER:-postgres}
+    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
 volumes:
   database_data:
     driver: local
