--- a/props/docker-compose.yml
+++ b/props/docker-compose.yml
@@ -1,22 +1,34 @@
-version: '3'
+version: '3.3'
 services:
   db:
-    build: ./db
+    build:
+      context: ./db
+      labels:
+        APP_PROJNAME: ${APP_PROJNAME}
+        APP_VERSION: ${APP_VERSION}
+        APP_BRANCH: ${APP_BRANCH}
+        APP_REVISION: ${APP_REVISION}
     image: itcw/props_db:${APP_VERSION:-latest}
     restart: always
     ports:
     - 5432:5432
     environment:
-    - APP_VERSION=${APP_VERSION}
-    - APP_BRANCH=${APP_BRANCH}
-    - APP_REVISION=${APP_REVISION}
-    - POSTGRES_DB=${POSTGRES_DB:-postgres}
-    - POSTGRES_USER=${POSTGRES_USER:-postgres}
-    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      APP_VERSION: ${APP_VERSION}
+      APP_BRANCH: ${APP_BRANCH}
+      APP_REVISION: ${APP_REVISION}
+      POSTGRES_DB: ${POSTGRES_DB:-postgres}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     volumes:
     - database_data:/var/lib/postgresql/data
   bot:
-    build: ./bot
+    build:
+      context: ./bot
+      labels:
+        APP_PROJNAME: ${APP_PROJNAME}
+        APP_VERSION: ${APP_VERSION}
+        APP_BRANCH: ${APP_BRANCH}
+        APP_REVISION: ${APP_REVISION}
     image: itcw/props_bot:${APP_VERSION:-latest}
     expose:
     - 8080
@@ -25,12 +37,12 @@ services:
     links:
     - db
     environment:
-    - APP_VERSION=${APP_VERSION}
-    - APP_BRANCH=${APP_BRANCH}
-    - APP_REVISION=${APP_REVISION}
-    - POSTGRES_DB=${POSTGRES_DB:-postgres}
-    - POSTGRES_USER=${POSTGRES_USER:-postgres}
-    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      APP_VERSION: ${APP_VERSION}
+      APP_BRANCH: ${APP_BRANCH}
+      APP_REVISION: ${APP_REVISION}
+      POSTGRES_DB: ${POSTGRES_DB:-postgres}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
 volumes:
   database_data:
     driver: local
