--- a/props/docker-compose.yml
+++ b/props/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-postgres}
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+    volumes:
+    - ${APP_PROJPATH}/bot/.env:/usr/src/app/.env
 volumes:
   database_data:
     driver: local
