Fix config, secrets handling
- added {secrets,generated}.env to docker-compose.yml
- added task for creating generated.env file
- fixed APP_DEPENV for prod, stage and dev
- removed tag task; kept publish imagename:imagetag same as local

--- a/props/docker-compose.yml
+++ b/props/docker-compose.yml
@@ -1,46 +1,30 @@
 version: '3.3'
 services:
   db:
+    env_file:
+      - secrets.env
+      - generated.env
     build:
       context: ./db
-      labels:
-        APP_PROJNAME: ${APP_PROJNAME}
-        APP_VERSION: ${APP_VERSION}
-        APP_BRANCH: ${APP_BRANCH}
-        APP_REVISION: ${APP_REVISION}
-    image: itcw/props_db:${APP_VERSION:-latest}
+    image: itcw/props_db:${APP_VERSION}
     restart: always
     ports:
     - 5432:5432
-    environment:
-      APP_PROJNAME: ${APP_PROJNAME}
-      APP_VERSION: ${APP_VERSION}
-      APP_BRANCH: ${APP_BRANCH}
-      APP_REVISION: ${APP_REVISION}
     volumes:
     - database_data:/var/lib/postgresql/data
   bot:
+    env_file:
+      - secrets.env
+      - generated.env
     build:
       context: ./bot
-      labels:
-        APP_PROJNAME: ${APP_PROJNAME}
-        APP_VERSION: ${APP_VERSION}
-        APP_BRANCH: ${APP_BRANCH}
-        APP_REVISION: ${APP_REVISION}
-    image: itcw/props_bot:${APP_VERSION:-latest}
+    image: itcw/props_bot:${APP_VERSION}
     expose:
     - 8080
     ports:
     - 8080:8080
     links:
     - db
-    environment:
-      APP_PROJNAME: ${APP_PROJNAME}
-      APP_VERSION: ${APP_VERSION}
-      APP_BRANCH: ${APP_BRANCH}
-      APP_REVISION: ${APP_REVISION}
-    volumes:
-    - ${APP_PROJPATH}/bot/.env:/usr/src/app/.env
 volumes:
   database_data:
     driver: local
